aggiunta matrice di confusione su final_model.ipynb

--- a/next_matches.ipynb
+++ b/next_matches.ipynb
@@ -11,20 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "from analysis import MatchAnalysis\n",
     "import pandas as pd\n",
     "import util_strings as utils\n",
-    "from end.ranking import Ranking\n",
+    "from ranking import Ranking\n",
     "from football_predictions import FootballPredictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  2.56it/s]\n",
-      "100%|██████████| 4/4 [00:02<00:00,  1.66it/s]\n"
+      "100%|██████████| 4/4 [00:01<00:00,  3.86it/s]\n",
+      "100%|██████████| 4/4 [00:02<00:00,  1.99it/s]\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,28 +101,6 @@
     "\n",
     "dt = pickle.load(open('ML model/ta decision tree 0.942 (no syn).model', 'rb'))\n",
     "predictions = dt.predict(mt.vectorizer.transform(mt.cleaned_corpus))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
-   "source": [
-    "cont = 0\n",
-    "for i, el in fp.df.iterrows():\n",
-    "    if (el.prediction == predictions[i]):\n",
-    "        cont += 1\n",
-    "          \n",
-    "print(cont)"
    ]
   },
   {
@@ -134,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,12 +127,20 @@
    "metadata": {},
    "source": [
     "## Calcolo delle medie\n",
-    "Per ciascun match devo calcolare le statistiche date dalle medie dei 5 match precedenti e poi devo ottenere il testo da football_prediction"
+    "Per ciascun match devo calcolare le statistiche date dalle medie dei 5 match precedenti e poi devo ottenere la predizione di football_prediction.\n",
+    "Sostituisco inoltre i codici delle squadre"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Per calcolare le medie devo prendere tutti i match di ciascuna squadra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +152,15 @@
     "#leggo tutti i match (doppi perché ci sono le statistiche x ogni squadra)\n",
     "ma.read_matches(utils.merged_statistics)\n",
     "#creo una lista di oggetti (lista di squadre)\n",
-    "ma.create_team_dataset() \n",
-    "\n",
+    "ma.create_team_dataset() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "matches['date'] = pd.to_datetime(matches['date'], format='%Y-%m-%d') \n",
     "float_features_and_avg = ['goals','total_shots','shots_on_target','goals_on_penalty','total_penalties','percentage_possession','fouls','yellow_cards','red_cards']\n",
     "\n",
@@ -201,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -250,18 +243,7 @@
        "      <th></th>\n",
        "      <th>home</th>\n",
        "      <th>away</th>\n",
-       "      <th>date</th>\n",
-       "      <th>result</th>\n",
        "      <th>prediction</th>\n",
-       "      <th>goals</th>\n",
-       "      <th>total_shots</th>\n",
-       "      <th>shots_on_target</th>\n",
-       "      <th>goals_on_penalty</th>\n",
-       "      <th>total_penalties</th>\n",
-       "      <th>percentage_possession</th>\n",
-       "      <th>fouls</th>\n",
-       "      <th>yellow_cards</th>\n",
-       "      <th>red_cards</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -269,215 +251,81 @@
        "      <th>0</th>\n",
        "      <td>Juventus</td>\n",
        "      <td>Empoli</td>\n",
-       "      <td>2022-10-21</td>\n",
-       "      <td>nan</td>\n",
        "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Salernitana</td>\n",
        "      <td>Spezia</td>\n",
-       "      <td>2022-10-22</td>\n",
-       "      <td>nan</td>\n",
        "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Fiorentina</td>\n",
        "      <td>Inter</td>\n",
-       "      <td>2022-10-22</td>\n",
-       "      <td>nan</td>\n",
        "      <td>P</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Milan</td>\n",
        "      <td>Monza</td>\n",
-       "      <td>2022-10-22</td>\n",
-       "      <td>nan</td>\n",
        "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Atalanta</td>\n",
        "      <td>Lazio</td>\n",
-       "      <td>2022-10-23</td>\n",
-       "      <td>nan</td>\n",
        "      <td>N</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Bologna</td>\n",
        "      <td>Lecce</td>\n",
-       "      <td>2022-10-23</td>\n",
-       "      <td>nan</td>\n",
        "      <td>P</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Roma</td>\n",
        "      <td>Napoli</td>\n",
-       "      <td>2022-10-23</td>\n",
-       "      <td>nan</td>\n",
        "      <td>P</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Udinese</td>\n",
        "      <td>Torino</td>\n",
-       "      <td>2022-10-23</td>\n",
-       "      <td>nan</td>\n",
        "      <td>P</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Sassuolo</td>\n",
        "      <td>Hellas Verona</td>\n",
-       "      <td>2022-10-24</td>\n",
-       "      <td>nan</td>\n",
        "      <td>P</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Cremonese</td>\n",
        "      <td>Sampdoria</td>\n",
-       "      <td>2022-10-24</td>\n",
-       "      <td>nan</td>\n",
        "      <td>V</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          home           away       date result prediction  goals  \\\n",
-       "0     Juventus         Empoli 2022-10-21    nan          V    NaN   \n",
-       "1  Salernitana         Spezia 2022-10-22    nan          V    NaN   \n",
-       "2   Fiorentina          Inter 2022-10-22    nan          P    NaN   \n",
-       "3        Milan          Monza 2022-10-22    nan          V    NaN   \n",
-       "4     Atalanta          Lazio 2022-10-23    nan          N    NaN   \n",
-       "5      Bologna          Lecce 2022-10-23    nan          P    NaN   \n",
-       "6         Roma         Napoli 2022-10-23    nan          P    NaN   \n",
-       "7      Udinese         Torino 2022-10-23    nan          P    NaN   \n",
-       "8     Sassuolo  Hellas Verona 2022-10-24    nan          P    NaN   \n",
-       "9    Cremonese      Sampdoria 2022-10-24    nan          V    NaN   \n",
-       "\n",
-       "   total_shots  shots_on_target  goals_on_penalty  total_penalties  \\\n",
-       "0          NaN              NaN               NaN              NaN   \n",
-       "1          NaN              NaN               NaN              NaN   \n",
-       "2          NaN              NaN               NaN              NaN   \n",
-       "3          NaN              NaN               NaN              NaN   \n",
-       "4          NaN              NaN               NaN              NaN   \n",
-       "5          NaN              NaN               NaN              NaN   \n",
-       "6          NaN              NaN               NaN              NaN   \n",
-       "7          NaN              NaN               NaN              NaN   \n",
-       "8          NaN              NaN               NaN              NaN   \n",
-       "9          NaN              NaN               NaN              NaN   \n",
-       "\n",
-       "   percentage_possession  fouls  yellow_cards  red_cards  \n",
-       "0                    NaN    NaN           NaN        NaN  \n",
-       "1                    NaN    NaN           NaN        NaN  \n",
-       "2                    NaN    NaN           NaN        NaN  \n",
-       "3                    NaN    NaN           NaN        NaN  \n",
-       "4                    NaN    NaN           NaN        NaN  \n",
-       "5                    NaN    NaN           NaN        NaN  \n",
-       "6                    NaN    NaN           NaN        NaN  \n",
-       "7                    NaN    NaN           NaN        NaN  \n",
-       "8                    NaN    NaN           NaN        NaN  \n",
-       "9                    NaN    NaN           NaN        NaN  "
+       "          home           away prediction\n",
+       "0     Juventus         Empoli          V\n",
+       "1  Salernitana         Spezia          V\n",
+       "2   Fiorentina          Inter          P\n",
+       "3        Milan          Monza          V\n",
+       "4     Atalanta          Lazio          N\n",
+       "5      Bologna          Lecce          P\n",
+       "6         Roma         Napoli          P\n",
+       "7      Udinese         Torino          P\n",
+       "8     Sassuolo  Hellas Verona          P\n",
+       "9    Cremonese      Sampdoria          V"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
