modifica struttura directory per una gestione migliore del progetto

--- a/download_and_merge_matches.ipynb
+++ b/download_and_merge_matches.ipynb
@@ -67,11 +67,11 @@
     "\n",
     "#Per la premier league: https://fbref.com/it/comp/9/Statistiche-di-Premier-League\n",
     "download_seasons = {\n",
-    "    #\"2022-2023\": \"https://fbref.com/it/comp/11/Statistiche-di-Serie-A\",\n",
+    "    \"2022-2023\": \"https://fbref.com/it/comp/11/Statistiche-di-Serie-A\",\n",
     "    #\"2021-2022\": \"https://fbref.com/it/comp/11/2021-2022/Statistiche-di-Serie-A-2021-2022\",\n",
-    "    \"2020-2021\": \"https://fbref.com/it/comp/11/2020-2021/Statistiche-di-Serie-A-2020-2021\",\n",
-    "    \"2019-2020\": \"https://fbref.com/it/comp/11/2019-2020/Statistiche-di-Serie-A-2019-2020\",\n",
-    "    \"2018-2019\": \"https://fbref.com/it/comp/11/2018-2019/Statistiche-di-Serie-A-2018-2019\"\n",
+    "    #\"2020-2021\": \"https://fbref.com/it/comp/11/2020-2021/Statistiche-di-Serie-A-2020-2021\",\n",
+    "    #\"2019-2020\": \"https://fbref.com/it/comp/11/2019-2020/Statistiche-di-Serie-A-2019-2020\",\n",
+    "    #\"2018-2019\": \"https://fbref.com/it/comp/11/2018-2019/Statistiche-di-Serie-A-2018-2019\"\n",
     "}"
    ]
   },
@@ -144,22 +144,21 @@
     }
    ],
    "source": [
-    "from os import listdir\n",
+    "from os import listdir, statvfs\n",
     "from os.path import isfile, join\n",
     "import pandas as pd\n",
     "from analysis import MatchAnalysis\n",
     "\n",
-    "mypath = utils.path_stats\n",
-    "onlyfiles = [f for f in listdir(mypath) if isfile(join(mypath, f))]\n",
+    "onlyfiles = [f for f in listdir(utils.stats) if isfile(join(utils.stats, f))]\n",
     "name_csv_statistics_FE_season = [x for x in onlyfiles if 'statistics.csv' in x] \n",
     "\n",
     "merged_statistics = pd.DataFrame()\n",
     "\n",
     "for name_statistics_single_season in sorted(name_csv_statistics_FE_season):\n",
-    "    print(mypath+name_statistics_single_season)\n",
-    "    statistics_single_season = pd.read_csv(mypath+name_statistics_single_season, index_col=0)\n",
+    "    print(utils.stats+name_statistics_single_season)\n",
+    "    statistics_single_season = pd.read_csv(utils.stats+name_statistics_single_season, index_col=0)\n",
     "\n",
-    "    #setto il nome della stagione come i 5 primi caratteri del nome del file\n",
+    "    #setto il nome della stagione come i 9 primi caratteri del nome del file\n",
     "    statistics_single_season['season'] = name_statistics_single_season[:9] #es: 2022-2023\n",
     "    merged_statistics = merged_statistics.append(statistics_single_season)\n",
     "\n",
