--- a/download_and_merge_matches.ipynb
+++ b/download_and_merge_matches.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,18 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "files/Serie A/2018-2019 statistics.csv\n",
-      "files/Serie A/2019-2020 statistics.csv\n",
-      "files/Serie A/2020-2021 statistics.csv\n",
-      "files/Serie A/2021-2022 statistics.csv\n",
-      "files/Serie A/2022-2023 statistics.csv\n"
+      "Serie A/Stats/2018-2019.csv\n",
+      "Serie A/Stats/2019-2020.csv\n",
+      "Serie A/Stats/2020-2021.csv\n",
+      "Serie A/Stats/2021-2022.csv\n",
+      "Serie A/Stats/2022-2023.csv\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
     "from analysis import MatchAnalysis\n",
     "\n",
     "onlyfiles = [f for f in listdir(utils.stats) if isfile(join(utils.stats, f))]\n",
-    "name_csv_statistics_FE_season = [x for x in onlyfiles if 'statistics.csv' in x] \n",
+    "name_csv_statistics_FE_season = [x for x in onlyfiles] \n",
     "\n",
     "merged_statistics = pd.DataFrame()\n",
     "\n",
