--- a/football_predictions.ipynb
+++ b/football_predictions.ipynb
@@ -177,25 +177,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "2019-08-30 00:00:00 Bologna SPAL\n",
-      "2022-03-06 00:00:00 Genoa Empoli\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/simonemalesardi/opt/anaconda3/lib/python3.8/site-packages/pandas/core/generic.py:5516: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self[name] = value\n"
+      "2019-08-30 00:00:00 bologna spal\n",
+      "2022-03-06 00:00:00 genoa empoli\n"
      ]
     }
    ],
    "source": [
-    "print()\n",
     "ta.matches_not_found()        \n",
     "ta.fix_dates(utils.cleaned_matches_description)"
    ]
@@ -213,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +298,7 @@
        "1155   Bologna and Verona face each other at Stadio R...          N  2022-2023  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -346,93 +333,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>date</th>\n",
        "      <th>home</th>\n",
        "      <th>away</th>\n",
-       "      <th>date</th>\n",
-       "      <th>result</th>\n",
-       "      <th>season</th>\n",
        "      <th>description</th>\n",
        "      <th>prediction</th>\n",
+       "      <th>season</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>fiorentina</td>\n",
-       "      <td>napoli</td>\n",
-       "      <td>2019-08-24</td>\n",
-       "      <td>P</td>\n",
+       "      <th>8</th>\n",
+       "      <td>2019-08-25</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>Stadio Marc’Antonio Bentegodi will host Sunday...</td>\n",
+       "      <td>N</td>\n",
        "      <td>2019-2020</td>\n",
-       "      <td>All eyes will be on Stadio Artemio Franchi whe...</td>\n",
-       "      <td>P</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>744</th>\n",
-       "      <td>fiorentina</td>\n",
-       "      <td>napoli</td>\n",
-       "      <td>2021-05-16</td>\n",
+       "      <th>192</th>\n",
+       "      <td>2020-01-19</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Stadio Renato Dall’Ara will host Sunday’s foot...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>548</th>\n",
+       "      <td>2021-01-16</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Bologna will be aiming to record their first l...</td>\n",
        "      <td>P</td>\n",
        "      <td>2020-2021</td>\n",
-       "      <td>Napoli will be aiming to move one step closer ...</td>\n",
-       "      <td>P</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>829</th>\n",
-       "      <td>fiorentina</td>\n",
-       "      <td>napoli</td>\n",
-       "      <td>2021-10-03</td>\n",
-       "      <td>P</td>\n",
+       "      <th>747</th>\n",
+       "      <td>2021-05-17</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>Monday’s football game between Verona and Bolo...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>788</th>\n",
+       "      <td>2021-09-12</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Bologna and Verona take on each other at Stadi...</td>\n",
+       "      <td>V</td>\n",
        "      <td>2021-2022</td>\n",
-       "      <td>Napoli will be aiming to keep their 100% recor...</td>\n",
-       "      <td>P</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1168</th>\n",
-       "      <td>fiorentina</td>\n",
-       "      <td>napoli</td>\n",
-       "      <td>2022-08-28</td>\n",
+       "      <th>974</th>\n",
+       "      <td>2022-01-21</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>Stadio Marc’Antonio Bentegodi will host Friday...</td>\n",
+       "      <td>V</td>\n",
+       "      <td>2021-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1155</th>\n",
+       "      <td>2022-08-21</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Bologna and Verona face each other at Stadio R...</td>\n",
        "      <td>N</td>\n",
        "      <td>2022-2023</td>\n",
-       "      <td>Fiorentina play host to Napoli at their Stadio...</td>\n",
-       "      <td>P</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            home    away       date result     season  \\\n",
-       "0     fiorentina  napoli 2019-08-24      P  2019-2020   \n",
-       "744   fiorentina  napoli 2021-05-16      P  2020-2021   \n",
-       "829   fiorentina  napoli 2021-10-03      P  2021-2022   \n",
-       "1168  fiorentina  napoli 2022-08-28      N  2022-2023   \n",
+       "            date           home           away  \\\n",
+       "index                                            \n",
+       "8     2019-08-25  hellas verona        bologna   \n",
+       "192   2020-01-19        bologna  hellas verona   \n",
+       "548   2021-01-16        bologna  hellas verona   \n",
+       "747   2021-05-17  hellas verona        bologna   \n",
+       "788   2021-09-12        bologna  hellas verona   \n",
+       "974   2022-01-21  hellas verona        bologna   \n",
+       "1155  2022-08-21        bologna  hellas verona   \n",
        "\n",
-       "                                            description prediction  \n",
-       "0     All eyes will be on Stadio Artemio Franchi whe...          P  \n",
-       "744   Napoli will be aiming to move one step closer ...          P  \n",
-       "829   Napoli will be aiming to keep their 100% recor...          P  \n",
-       "1168  Fiorentina play host to Napoli at their Stadio...          P  "
+       "                                             description prediction     season  \n",
+       "index                                                                           \n",
+       "8      Stadio Marc’Antonio Bentegodi will host Sunday...          N  2019-2020  \n",
+       "192    Stadio Renato Dall’Ara will host Sunday’s foot...          N  2019-2020  \n",
+       "548    Bologna will be aiming to record their first l...          P  2020-2021  \n",
+       "747    Monday’s football game between Verona and Bolo...          N  2020-2021  \n",
+       "788    Bologna and Verona take on each other at Stadi...          V  2021-2022  \n",
+       "974    Stadio Marc’Antonio Bentegodi will host Friday...          V  2021-2022  \n",
+       "1155   Bologna and Verona face each other at Stadio R...          N  2022-2023  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ta.df[((ta.df.home=='fiorentina')&(ta.df.away=='napoli')) | ((ta.df.away=='fiorentina')&(ta.df.away=='napoli'))]"
+    "ta.recoveries[((ta.recoveries.home == 'bologna') & (ta.recoveries.away == 'hellas verona')) | ((ta.recoveries.away == 'bologna') & (ta.recoveries.home == 'hellas verona'))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1240 1240\n",
       "1240 1240\n"
      ]
     }
@@ -443,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +668,7 @@
        "1189                                                NaN        NAN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
