--- a/football_predictions.ipynb
+++ b/football_predictions.ipynb
@@ -165,14 +165,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-21 00:00:00 juventus empoli\n",
-      "['https://footballpredictions.com/footballpredictions/serieapredictions/juventus-vs-empoli-prediction-3/']\n",
-      "2022-10-22 00:00:00 fiorentina inter\n",
-      "['https://footballpredictions.com/footballpredictions/serieapredictions/fiorentina-vs-inter-prediction-5/']\n",
-      "2022-10-22 00:00:00 salernitana spezia\n",
-      "['https://footballpredictions.com/footballpredictions/serieapredictions/salernitana-vs-spezia-prediction-3/']\n",
-      "2022-10-22 00:00:00 milan monza\n",
-      "['https://footballpredictions.com/footballpredictions/serieapredictions/milan-vs-monza-prediction/']\n"
+      "2019-08-30 00:00:00 bologna spal\n",
+      "2022-03-06 00:00:00 genoa empoli\n"
      ]
     }
    ],
@@ -185,7 +179,15 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "genoa empoli 2022-03-06 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "for i, k in ta.matches.iterrows():\n",
     "    if len(ta.recoveries[(ta.recoveries.home == k.home) & (ta.recoveries.away == k.away) & (ta.recoveries.season == k.season)]) == 0:\n",
@@ -237,7 +239,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
+       "      <th>572</th>\n",
+       "      <td>2020-01-19</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Stadio Renato Dall’Ara will host Sunday’s foot...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>928</th>\n",
+       "      <td>2021-01-16</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Bologna will be aiming to record their first l...</td>\n",
+       "      <td>P</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1168</th>\n",
+       "      <td>2021-09-12</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Bologna and Verona take on each other at Stadi...</td>\n",
+       "      <td>V</td>\n",
+       "      <td>2021-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1535</th>\n",
        "      <td>2022-08-21</td>\n",
        "      <td>bologna</td>\n",
        "      <td>hellas verona</td>\n",
@@ -252,11 +281,17 @@
       "text/plain": [
        "            date     home           away  \\\n",
        "index                                      \n",
-       "67    2022-08-21  bologna  hellas verona   \n",
+       "572   2020-01-19  bologna  hellas verona   \n",
+       "928   2021-01-16  bologna  hellas verona   \n",
+       "1168  2021-09-12  bologna  hellas verona   \n",
+       "1535  2022-08-21  bologna  hellas verona   \n",
        "\n",
        "                                             description prediction     season  \n",
        "index                                                                           \n",
-       "67     Bologna and Verona face each other at Stadio R...          N  2022-2023  "
+       "572    Stadio Renato Dall’Ara will host Sunday’s foot...          N  2019-2020  \n",
+       "928    Bologna will be aiming to record their first l...          P  2020-2021  \n",
+       "1168   Bologna and Verona take on each other at Stadi...          V  2021-2022  \n",
+       "1535   Bologna and Verona face each other at Stadio R...          N  2022-2023  "
       ]
      },
      "execution_count": 9,
@@ -313,7 +348,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
+       "      <th>388</th>\n",
+       "      <td>2019-08-25</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>Stadio Marc’Antonio Bentegodi will host Sunday...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>2020-01-19</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Stadio Renato Dall’Ara will host Sunday’s foot...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2019-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>928</th>\n",
+       "      <td>2021-01-16</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Bologna will be aiming to record their first l...</td>\n",
+       "      <td>P</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1127</th>\n",
+       "      <td>2021-05-17</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>Monday’s football game between Verona and Bolo...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2020-2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1168</th>\n",
+       "      <td>2021-09-12</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>Bologna and Verona take on each other at Stadi...</td>\n",
+       "      <td>V</td>\n",
+       "      <td>2021-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1354</th>\n",
+       "      <td>2022-01-21</td>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>Stadio Marc’Antonio Bentegodi will host Friday...</td>\n",
+       "      <td>V</td>\n",
+       "      <td>2021-2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1535</th>\n",
        "      <td>2022-08-21</td>\n",
        "      <td>bologna</td>\n",
        "      <td>hellas verona</td>\n",
@@ -326,13 +415,25 @@
        "</div>"
       ],
       "text/plain": [
-       "            date     home           away  \\\n",
-       "index                                      \n",
-       "67    2022-08-21  bologna  hellas verona   \n",
+       "            date           home           away  \\\n",
+       "index                                            \n",
+       "388   2019-08-25  hellas verona        bologna   \n",
+       "572   2020-01-19        bologna  hellas verona   \n",
+       "928   2021-01-16        bologna  hellas verona   \n",
+       "1127  2021-05-17  hellas verona        bologna   \n",
+       "1168  2021-09-12        bologna  hellas verona   \n",
+       "1354  2022-01-21  hellas verona        bologna   \n",
+       "1535  2022-08-21        bologna  hellas verona   \n",
        "\n",
        "                                             description prediction     season  \n",
        "index                                                                           \n",
-       "67     Bologna and Verona face each other at Stadio R...          N  2022-2023  "
+       "388    Stadio Marc’Antonio Bentegodi will host Sunday...          N  2019-2020  \n",
+       "572    Stadio Renato Dall’Ara will host Sunday’s foot...          N  2019-2020  \n",
+       "928    Bologna will be aiming to record their first l...          P  2020-2021  \n",
+       "1127   Monday’s football game between Verona and Bolo...          N  2020-2021  \n",
+       "1168   Bologna and Verona take on each other at Stadi...          V  2021-2022  \n",
+       "1354   Stadio Marc’Antonio Bentegodi will host Friday...          V  2021-2022  \n",
+       "1535   Bologna and Verona face each other at Stadio R...          N  2022-2023  "
       ]
      },
      "execution_count": 10,
@@ -353,7 +454,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150 154\n"
+      "1640 1639\n"
      ]
     }
    ],
@@ -398,7 +499,27 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
+       "      <th>1091</th>\n",
+       "      <td>hellas verona</td>\n",
+       "      <td>spezia</td>\n",
+       "      <td>2021-05-01</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2020-2021</td>\n",
+       "      <td>After suffering a 1-0 loss to Inter on Matchda...</td>\n",
+       "      <td>NAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1336</th>\n",
+       "      <td>udinese</td>\n",
+       "      <td>atalanta</td>\n",
+       "      <td>2022-01-09</td>\n",
+       "      <td>P</td>\n",
+       "      <td>2021-2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1552</th>\n",
        "      <td>juventus</td>\n",
        "      <td>spezia</td>\n",
        "      <td>2022-08-31</td>\n",
@@ -408,27 +529,7 @@
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>fiorentina</td>\n",
-       "      <td>juventus</td>\n",
-       "      <td>2022-09-03</td>\n",
-       "      <td>N</td>\n",
-       "      <td>2022-2023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>milan</td>\n",
-       "      <td>inter</td>\n",
-       "      <td>2022-09-03</td>\n",
-       "      <td>V</td>\n",
-       "      <td>2022-2023</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
+       "      <th>1561</th>\n",
        "      <td>lazio</td>\n",
        "      <td>napoli</td>\n",
        "      <td>2022-09-03</td>\n",
@@ -438,17 +539,27 @@
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>spezia</td>\n",
-       "      <td>bologna</td>\n",
-       "      <td>2022-09-04</td>\n",
+       "      <th>1560</th>\n",
+       "      <td>milan</td>\n",
+       "      <td>inter</td>\n",
+       "      <td>2022-09-03</td>\n",
+       "      <td>V</td>\n",
+       "      <td>2022-2023</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1559</th>\n",
+       "      <td>fiorentina</td>\n",
+       "      <td>juventus</td>\n",
+       "      <td>2022-09-03</td>\n",
        "      <td>N</td>\n",
        "      <td>2022-2023</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>1562</th>\n",
        "      <td>cremonese</td>\n",
        "      <td>sassuolo</td>\n",
        "      <td>2022-09-04</td>\n",
@@ -458,7 +569,7 @@
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
+       "      <th>1563</th>\n",
        "      <td>hellas verona</td>\n",
        "      <td>sampdoria</td>\n",
        "      <td>2022-09-04</td>\n",
@@ -468,7 +579,7 @@
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
+       "      <th>1564</th>\n",
        "      <td>udinese</td>\n",
        "      <td>roma</td>\n",
        "      <td>2022-09-04</td>\n",
@@ -478,17 +589,17 @@
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>torino</td>\n",
-       "      <td>lecce</td>\n",
-       "      <td>2022-09-05</td>\n",
-       "      <td>V</td>\n",
+       "      <th>1565</th>\n",
+       "      <td>spezia</td>\n",
+       "      <td>bologna</td>\n",
+       "      <td>2022-09-04</td>\n",
+       "      <td>N</td>\n",
        "      <td>2022-2023</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>93</th>\n",
+       "      <th>1566</th>\n",
        "      <td>salernitana</td>\n",
        "      <td>empoli</td>\n",
        "      <td>2022-09-05</td>\n",
@@ -498,11 +609,21 @@
        "      <td>NAN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>94</th>\n",
+       "      <th>1567</th>\n",
        "      <td>monza</td>\n",
        "      <td>atalanta</td>\n",
        "      <td>2022-09-05</td>\n",
        "      <td>P</td>\n",
+       "      <td>2022-2023</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1568</th>\n",
+       "      <td>torino</td>\n",
+       "      <td>lecce</td>\n",
+       "      <td>2022-09-05</td>\n",
+       "      <td>V</td>\n",
        "      <td>2022-2023</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NAN</td>\n",
@@ -512,31 +633,35 @@
        "</div>"
       ],
       "text/plain": [
-       "             home       away       date result     season description  \\\n",
-       "79       juventus     spezia 2022-08-31      V  2022-2023         NaN   \n",
-       "86     fiorentina   juventus 2022-09-03      N  2022-2023         NaN   \n",
-       "87          milan      inter 2022-09-03      V  2022-2023         NaN   \n",
-       "88          lazio     napoli 2022-09-03      P  2022-2023         NaN   \n",
-       "92         spezia    bologna 2022-09-04      N  2022-2023         NaN   \n",
-       "89      cremonese   sassuolo 2022-09-04      N  2022-2023         NaN   \n",
-       "90  hellas verona  sampdoria 2022-09-04      V  2022-2023         NaN   \n",
-       "91        udinese       roma 2022-09-04      V  2022-2023         NaN   \n",
-       "95         torino      lecce 2022-09-05      V  2022-2023         NaN   \n",
-       "93    salernitana     empoli 2022-09-05      N  2022-2023         NaN   \n",
-       "94          monza   atalanta 2022-09-05      P  2022-2023         NaN   \n",
+       "               home       away       date result     season  \\\n",
+       "1091  hellas verona     spezia 2021-05-01      N  2020-2021   \n",
+       "1336        udinese   atalanta 2022-01-09      P  2021-2022   \n",
+       "1552       juventus     spezia 2022-08-31      V  2022-2023   \n",
+       "1561          lazio     napoli 2022-09-03      P  2022-2023   \n",
+       "1560          milan      inter 2022-09-03      V  2022-2023   \n",
+       "1559     fiorentina   juventus 2022-09-03      N  2022-2023   \n",
+       "1562      cremonese   sassuolo 2022-09-04      N  2022-2023   \n",
+       "1563  hellas verona  sampdoria 2022-09-04      V  2022-2023   \n",
+       "1564        udinese       roma 2022-09-04      V  2022-2023   \n",
+       "1565         spezia    bologna 2022-09-04      N  2022-2023   \n",
+       "1566    salernitana     empoli 2022-09-05      N  2022-2023   \n",
+       "1567          monza   atalanta 2022-09-05      P  2022-2023   \n",
+       "1568         torino      lecce 2022-09-05      V  2022-2023   \n",
        "\n",
-       "   prediction  \n",
-       "79        NAN  \n",
-       "86        NAN  \n",
-       "87        NAN  \n",
-       "88        NAN  \n",
-       "92        NAN  \n",
-       "89        NAN  \n",
-       "90        NAN  \n",
-       "91        NAN  \n",
-       "95        NAN  \n",
-       "93        NAN  \n",
-       "94        NAN  "
+       "                                            description prediction  \n",
+       "1091  After suffering a 1-0 loss to Inter on Matchda...        NAN  \n",
+       "1336                                                NaN        NAN  \n",
+       "1552                                                NaN        NAN  \n",
+       "1561                                                NaN        NAN  \n",
+       "1560                                                NaN        NAN  \n",
+       "1559                                                NaN        NAN  \n",
+       "1562                                                NaN        NAN  \n",
+       "1563                                                NaN        NAN  \n",
+       "1564                                                NaN        NAN  \n",
+       "1565                                                NaN        NAN  \n",
+       "1566                                                NaN        NAN  \n",
+       "1567                                                NaN        NAN  \n",
+       "1568                                                NaN        NAN  "
       ]
      },
      "execution_count": 12,
@@ -556,7 +681,7 @@
     {
      "data": {
       "text/plain": [
-       "(150, 150)"
+       "(1640, 1639)"
       ]
      },
      "execution_count": 13,
