modello con più percentuale

--- a/text analysis.ipynb
+++ b/text analysis.ipynb
@@ -10,13 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from my_tokenizer import MyTokenizer\n",
-    "#from classification import Classification\n",
-    "#from model import Model\n",
     "import pandas as pd\n",
     "import util_strings as utils"
    ]
@@ -31,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "mt.clean_text()\n",
-    "X_train, X_test, y_train, y_test = mt.set_bigram_and_get_sets()\n",
-    "#mt.save_vectorizer(utils.vectorizer)\n",
-    "#mt.dataset"
+    "vectorizer = True #se True TfidfVectorizer, se False CountVectorizer\n",
+    "X_train, X_test, y_train, y_test = mt.set_bigram_and_get_sets(vectorizer) \n",
+    "path_vec = utils.TfidfVectorizer if vectorizer else utils.CountVectorizer\n",
+    "mt.save_vectorizer(path_vec)"
    ]
   },
   {
@@ -63,78 +62,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "model = DecisionTreeClassifier()"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import sklearn.metrics as mtr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7484662576687117\n",
-      "0.754601226993865\n",
-      "0.7607361963190185\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-55d70a0ea65c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mwhile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccuracy\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0.834\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0manalysis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/tree/_classes.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[1;32m    896\u001b[0m         \"\"\"\n\u001b[1;32m    897\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 898\u001b[0;31m         super().fit(\n\u001b[0m\u001b[1;32m    899\u001b[0m             \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    900\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/tree/_classes.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, check_input, X_idx_sorted)\u001b[0m\n\u001b[1;32m    387\u001b[0m                                            min_impurity_split)\n\u001b[1;32m    388\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 389\u001b[0;31m         \u001b[0mbuilder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtree_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    390\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    391\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_outputs_\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mis_classifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "0.8159509202453987\n",
+      "0.8251533742331288\n",
+      "0.8343558282208589\n"
      ]
     }
    ],
    "source": [
-    "import sklearn.metrics as mtr\n",
     "E = []\n",
     "\n",
-    "accuracy = 0\n",
-    "while(accuracy < 0.834):\n",
+    "if vectorizer:\n",
+    "    model = DecisionTreeClassifier()\n",
+    "    accuracy = 0\n",
+    "    min_val = 0.834 \n",
+    "\n",
+    "    while(accuracy < min_val):\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        analysis = pd.DataFrame()\n",
+    "                \n",
+    "        report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)\n",
+    "        if report['accuracy'] > accuracy: \n",
+    "            accuracy = report['accuracy']\n",
+    "            print(accuracy)\n",
+    "else: \n",
+    "    model = LogisticRegression()\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
-    "    analysis = pd.DataFrame()\n",
-    "            \n",
-    "    report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)\n",
-    "    if report['accuracy'] > accuracy: \n",
-    "        accuracy = report['accuracy']\n",
-    "        print(accuracy)"
+    "    report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'Model': 'Model',\n",
-       " 'Accuracy': 0.8220858895705522,\n",
-       " 'Avg Precision (macro)': 0.8271607461051805,\n",
-       " 'Avg Recall (macro)': 0.7946918935492889,\n",
-       " 'Avg F1-score (macro)': 0.8073618724918153,\n",
-       " 'Avg Precision (weighted)': 0.827820404993625,\n",
-       " 'Avg Recall (weighted)': 0.8220858895705522,\n",
-       " 'Avg F1-score (weighted)': 0.8212416267302488}"
+       " 'Accuracy': 0.8343558282208589,\n",
+       " 'Avg Precision (macro)': 0.8390828924162257,\n",
+       " 'Avg Recall (macro)': 0.8081253889094304,\n",
+       " 'Avg F1-score (macro)': 0.8197957225890186,\n",
+       " 'Avg Precision (weighted)': 0.841626902976596,\n",
+       " 'Avg Recall (weighted)': 0.8343558282208589,\n",
+       " 'Avg F1-score (weighted)': 0.8340265942144133}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,6 +148,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(272, 326)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "count = 0\n",
+    "k = 0\n",
+    "y_test=np.array(y_test)\n",
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] == y_test[i]:\n",
+    "        count+=1\n",
+    "    \n",
+    "print(count, len(y_pred))\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -167,8 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open(utils.text_analysis, 'wb') as file:\n",
-    "#    pickle.dump(model, file)"
+    "file_name = utils.classificatorTfIdf if vectorizer else utils.classificatorCV_LR\n",
+    "with open(file_name, 'wb') as file:\n",
+    "    pickle.dump(model, file)"
    ]
   }
  ],
