--- a/text analysis.ipynb
+++ b/text analysis.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "mt.clean_text()\n",
-    "vectorizer = True #se True TfidfVectorizer, se False CountVectorizer\n",
+    "vectorizer = False #se True TfidfVectorizer, se False CountVectorizer\n",
     "X_train, X_test, y_train, y_test = mt.set_bigram_and_get_sets(vectorizer) \n",
     "path_vec = utils.TfidfVectorizer if vectorizer else utils.CountVectorizer\n",
     "mt.save_vectorizer(path_vec)"
@@ -148,31 +148,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(272, 326)"
+       "(array([1., 0., 1., 2., 2., 2., 0., 2.]),\n",
+       " array([1., 0., 1., 1., 2., 1., 0., 2.]))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "count = 0\n",
-    "k = 0\n",
-    "y_test=np.array(y_test)\n",
-    "for i in range(len(y_pred)):\n",
-    "    if y_pred[i] == y_test[i]:\n",
-    "        count+=1\n",
-    "    \n",
-    "print(count, len(y_pred))\n",
-    "print()"
+    "y_test[-8:], y_pred[-8:]"
    ]
   },
   {
