--- a/download_and_merge_matches.ipynb
+++ b/download_and_merge_matches.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,8 +84,7 @@
      "output_type": "stream",
      "text": [
       "Season 2022-2023 downloading...\n",
-      "Season 2022-2023 download ended\n",
-      "\n"
+      "[]\n"
      ]
     }
    ],
@@ -107,8 +106,9 @@
     "    end = time.time()\n",
     "    downloadDF.at[row, 'season'] = season\n",
     "    downloadDF.at[row, 'download time'] = end-start\n",
-    "    downloadDF.at[row, 'n. matches'] = len(download.all_matches)/2 #divido per due perché ho i match sia per squadra di casa che per trasferta, quindi sono doppi\n",
-    "    row += 1"
+    "    downloadDF.at[row, 'n. matches'] = len(download.all_matches)/2 \n",
+    "    row += 1\n",
+    "    "
    ]
   },
   {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
