modello finale con eliminazione numeri e punteggiatura regex

--- a/text analysis.ipynb
+++ b/text analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,23 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "mt = MyTokenizer(pd.read_csv(utils.completed_dataset, index_col=0))\n",
-    "mt.feature_normalization()\n",
-    "#mt.dataset"
+    "mt.feature_normalization()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "mt.clean_text()\n",
-    "vectorizer = False #se True TfidfVectorizer, se False CountVectorizer\n",
+    "vectorizer = True #se True TfidfVectorizer, se False CountVectorizer\n",
     "X_train, X_test, y_train, y_test = mt.set_bigram_and_get_sets(vectorizer) \n",
     "path_vec = utils.TfidfVectorizer if vectorizer else utils.CountVectorizer\n",
     "mt.save_vectorizer(path_vec)"
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,52 +72,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8098159509202454\n",
+      "0.8159509202453987\n",
+      "0.8220858895705522\n",
+      "0.8282208588957055\n"
+     ]
+    }
+   ],
    "source": [
     "E = []\n",
     "\n",
-    "if vectorizer:\n",
-    "    model = DecisionTreeClassifier()\n",
-    "    accuracy = 0\n",
-    "    min_val = 0.834 \n",
+    "model = DecisionTreeClassifier()\n",
+    "accuracy = 0\n",
+    "min_val = 0.837\n",
     "\n",
-    "    while(accuracy < min_val):\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "        analysis = pd.DataFrame()\n",
-    "                \n",
-    "        report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)\n",
-    "        if report['accuracy'] > accuracy: \n",
-    "            accuracy = report['accuracy']\n",
-    "            print(accuracy)\n",
-    "else: \n",
-    "    model = LogisticRegression()\n",
+    "while(accuracy < min_val):\n",
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
-    "    report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)"
+    "    analysis = pd.DataFrame()\n",
+    "            \n",
+    "    report = mtr.classification_report(y_test, y_pred, output_dict=True, zero_division=0)\n",
+    "    if report['accuracy'] > accuracy: \n",
+    "        accuracy = report['accuracy']\n",
+    "        print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'Model': 'Model',\n",
-       " 'Accuracy': 0.852760736196319,\n",
-       " 'Avg Precision (macro)': 0.8660698463330041,\n",
-       " 'Avg Recall (macro)': 0.8246951100369445,\n",
-       " 'Avg F1-score (macro)': 0.8398138015605912,\n",
-       " 'Avg Precision (weighted)': 0.8577622306836061,\n",
-       " 'Avg Recall (weighted)': 0.852760736196319,\n",
-       " 'Avg F1-score (weighted)': 0.8509749592755382}"
+       " 'Accuracy': 0.8312883435582822,\n",
+       " 'Avg Precision (macro)': 0.8321414312219639,\n",
+       " 'Avg Recall (macro)': 0.8095553731877195,\n",
+       " 'Avg F1-score (macro)': 0.8181840070033791,\n",
+       " 'Avg Precision (weighted)': 0.8360927835764541,\n",
+       " 'Avg Recall (weighted)': 0.8312883435582822,\n",
+       " 'Avg F1-score (weighted)': 0.8309278025108741}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,19 +142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pickle\n",
     "file_name = utils.classificatorTfIdf if vectorizer else utils.classificatorCV_LR\n",
     "with open(file_name, 'wb') as file:\n",
     "    pickle.dump(model, file)"
